tests/baselines/reference/tsxSfcReturnUndefinedStrictNullChecks.errors.txt
file.tsx(9,14): error TS2786: 'Foo' cannot be used as a JSX component.
  Its return type 'undefined' is not a valid JSX element.
file.tsx(10,12): error TS2786: 'Greet' cannot be used as a JSX component.
  Its return type 'undefined' is not a valid JSX element.


==== file.tsx (2 errors) ====
    import React = require('react');
    
    const Foo = (props: any) => undefined;
    function Greet(x: {name?: string}) {
    	return undefined;
    }
    
    // Error
    const foo = <Foo />;
                 ~~~
!!! error TS2786: 'Foo' cannot be used as a JSX component.
!!! error TS2786:   Its return type 'undefined' is not a valid JSX element.
    const G = <Greet />;
               ~~~~~
!!! error TS2786: 'Greet' cannot be used as a JSX component.
!!! error TS2786:   Its return type 'undefined' is not a valid JSX element.